package com.xinxin.builder.fastfood;

public interface Packing {
    public String pack();
}
