package com.xinxin.builder.fastfood;

public class Wrapper implements Packing{
    @Override
    public String pack() {
        return "Wrapper";
    }
}
