package com.xinxin.builder.fastfood;

public class Bottle implements Packing{
    @Override
    public String pack() {
        return "Bottle";
    }
}
