package com.xinxin.builder.fastfood;

public interface Item {
    public String name();
    public Packing packing();
    public float price();
}
