@startuml
'https://plantuml.com/class-diagram

interface Item
abstract class Burger
abstract class ColdDrink
class VegBurger
class ChickenBurger

interface Packing
class Wrapper
class Bottle

interface Item {
name(): String
packing(): Packing
price(): float
}

class Meal {
items:List<Item>
addItem(Item item): void
getCost(): float
showItems(): void
}

class MealBuilder {
prepareVegMeal(): Meal
prepareNonVegMeal(): Meal
}

Item <|---- Burger
Item <|---- ColdDrink
Packing <|-- Wrapper
Packing <|-- Bottle

Wrapper --o Burger
Bottle --o ColdDrink
Burger <|-- VegBurger
Burger <|-- ChickenBurger
ColdDrink <|-- Pepsi
ColdDrink <|-- Coke

Meal o-- Item

MealBuilder ..> Meal
Client ..> MealBuilder
Client ..> Meal

@enduml